extended vagrant testing environment

--- a/build.default.properties
+++ b/build.default.properties
@@ -12,8 +12,19 @@
 # The BUILD_NUMBER is provided by Jenkins, if we are in a local environment username will used instead
 env.BUILD_NUMBER = ${user.name}_${time.stamp}
 
+# ---- Vagrant specific directories ---------------------------------------------
+vagrant.basedir = /vagrant
+vagrant-build.dir = ${vagrant.basedir}/build
+vagrant-temp.dir = ${vagrant.basedir}/tmp
+vagrant.provider = virtualbox
+
+# ---- Vagrant box settings -----------------------------------------------------
+vagrant-box.prefix = appserverFedora${target-os.version}
+
 # ---- build settings - ---------------------------------------------------------
 os.architecture = x86_64
+os.version.prefix = fc
+target-os.version = 21
 build.number = ${env.BUILD_NUMBER}
 build.name.prefix = appserver-
 build.name.ext = rpm
@@ -22,7 +33,7 @@ build.server.host = bernade.appserver.io
 build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
 # ---- github settings ----------------------------------------------------------
-github.oauth = 604a3b5943228e434a5b52c2ba3cf72286d30db9
+github.oauth.token = 604a3b5943228e434a5b52c2ba3cf72286d30db9
 
 # Specific SCP settings as we have a strange build dir on Fedora ----------------
 package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
