--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -7,9 +7,9 @@
 # @author    Bernhard Wick <bw@appserver.io>
 #--------------------------------------------------------------------------------
 
-# ---- Vagrant specific directories ---------------------------------------------
-vagrant.basedir = /vagrant
-vagrant-build.dir = ${vagrant.basedir}/build
+# ---- Test specific configuration values  --------------------------------------
+test.basedir = .
 
-# ---- Vagrant box settings -----------------------------------------------------
-vagrant-box.name = appserverTestFedora20
+# ---- Jmeter specific properties -----------------------------------------------
+jmeter.vagrant.dir = /opt/jmeter
+jmeter.example-test.path ${appserver-base.dir}/webapps/example/jmeter/example-testplan.jmx
