added basic reporting

--- a/build.default.properties
+++ b/build.default.properties
@@ -16,6 +16,7 @@ env.BUILD_NUMBER = ${user.name}_${time.stamp}
 vagrant.basedir = /vagrant
 vagrant-build.dir = ${vagrant.basedir}/build
 vagrant-temp.dir = ${vagrant.basedir}/tmp
+vagrant-reports.dir = ${vagrant.basedir}/reports
 vagrant.provider = virtualbox
 
 # ---- Vagrant box settings -----------------------------------------------------
