--- a/build.xml
+++ b/build.xml
@@ -37,16 +37,16 @@
     <!-- ==================================================================== -->
     <!-- Cleans the build directories                                         -->
     <!-- ==================================================================== -->
-    <target name="clean-build">
+    <target name="clean-build"  depends="prepare-build">
         <delete includeemptydirs="true" quiet="false" verbose="false" failonerror="true">
             <fileset dir="${build.dir}" includes="**/*"/>
         </delete>
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Cleans the reports directories                                         -->
+    <!-- Cleans the reports directories                                       -->
     <!-- ==================================================================== -->
-    <target name="clean-reports">
+    <target name="clean-reports"  depends="prepare-reports">
         <delete includeemptydirs="true" quiet="false" verbose="false" failonerror="true">
             <fileset dir="${reports.dir}" includes="**/*"/>
         </delete>
@@ -61,16 +61,16 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Prepares the reports environment                                       -->
+    <!-- Prepares the reports environment                                     -->
     <!-- ==================================================================== -->
-    <target name="prepare-reports" depends="clean-reports">
+    <target name="prepare-reports">
         <mkdir dir="${reports.dir}" />
     </target>
 
     <!-- ==================================================================== -->
     <!-- Prepares the build environment                                       -->
     <!-- ==================================================================== -->
-    <target name="prepare-build" depends="clean-build">
+    <target name="prepare-build">
         <mkdir dir="${build.dir}" />
     </target>
 
