--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -12,4 +12,4 @@ test.basedir = .
 
 # ---- Jmeter specific properties -----------------------------------------------
 jmeter.vagrant.dir = /opt/jmeter
-jmeter.example-test.path ${appserver-base.dir}/webapps/example/jmeter/example-testplan.jmx
+jmeter.example-test.path ${appserver-base.dir}/webapps/example/jmeter
