--- a/build.xml
+++ b/build.xml
@@ -127,21 +127,25 @@
             <arg line="checkout -q ${appserver.src.version}" />
         </exec>
         <!-- move to target.dir -->
-        <move todir="${target.dir}/src/opt/appserver">
+        <move todir="${target.dir}/src${appserver-base.dir}">
             <fileset dir="${temp.dir}/appserver-src"/>
         </move>
         <!-- remove git db files -->
-        <delete dir="${target.dir}/src/opt/appserver/.git" includeemptydirs="true" />
+        <delete dir="${target.dir}/src${appserver-base.dir}/.git" includeemptydirs="true" />
         <!-- create the file with the version number -->
-        <echo file="${target.dir}/src/opt/appserver/etc/appserver/.release-version" message="${appserver.src.semver}-${build.number}${appserver.src.suffix}" />
+        <echo file="${target.dir}/src${appserver-base.dir}/etc/appserver/.release-version" message="${appserver.src.semver}-${build.number}${appserver.src.suffix}" />
         <!-- install dependencies via composer and let postinstall-scripts proceed -->
-        <exec dir="${target.dir}/src/opt/appserver" executable="php">
+        <echo message="Installing composer dependencies" />
+        <exec dir="${target.dir}/src${appserver-base.dir}" executable="php">
+                    <arg line="${temp.dir}/composer.phar config github-oauth.github.com ${github.oauth.token}"/>
+                </exec>
+        <exec dir="${target.dir}/src${appserver-base.dir}" executable="php">
             <arg line="${temp.dir}/composer.phar install --prefer-dist --no-dev --no-interaction --ignore-platform-reqs --optimize-autoloader"/>
         </exec>
         <!-- create deploy folder if not exists -->
         <mkdir dir="${target.dir}/src/opt/appserver/deploy"/>
         <!-- deploy example app by putting it into deploy folder of runtime -->
-        <get src="${appserver.apps.example.url}" dest="${target.dir}/src/opt/appserver/deploy/example.phar" />
+        <get src="${appserver.apps.example.url}" dest="${target.dir}/src${appserver-base.dir}/deploy/example.phar" />
     </target>
 
     <!-- ==================================================================== -->
@@ -389,7 +393,7 @@
         <antcall target="start-vagrant-box" />
         <!-- invoke original integration tests within vagrant box -->
         <exec dir="${temp.dir}" executable="vagrant">
-            <arg line="ssh -c 'sudo ant run-integration-tests -buildfile ${vagrant.basedir}/build.xml'" />
+            <arg line="ssh -c 'sudo ant run-system-tests -buildfile ${vagrant.basedir}/build.xml'" />
         </exec>
         <!-- invoke original integration tests within vagrant box -->
         <exec dir="${temp.dir}" executable="vagrant">
