mounted src.dir into vagrant box

--- a/build.default.properties
+++ b/build.default.properties
@@ -17,6 +17,7 @@ vagrant.basedir = /vagrant
 vagrant-build.dir = ${vagrant.basedir}/build
 vagrant-temp.dir = ${vagrant.basedir}/tmp
 vagrant-reports.dir = ${vagrant.basedir}/reports
+vagrant-src.dir = ${vagrant.basedir}/src
 vagrant.provider = virtualbox
 
 # ---- Vagrant box settings -----------------------------------------------------
