--- a/build.default.properties
+++ b/build.default.properties
@@ -47,7 +47,7 @@ appserver.src.repo = appserver-io/appserver
 # ---- appserver runtime --------------------------------------------------------
 appserver.runtime.version = 1.1.0
 appserver.runtime.build = 49.alpha2
-appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version}.${os.architecture}
+appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version.prefix}${target-os.version}.${os.architecture}
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
