made target-os.version optional

--- a/build.default.properties
+++ b/build.default.properties
@@ -23,11 +23,15 @@ vagrant.provider = virtualbox
 # ---- Vagrant box settings -----------------------------------------------------
 vagrant-box.prefix = appserverFedora${target-os.version}
 
+# ---- build specific settings - ---------------------------------------------------------
+# Supply only if not given otherwise e.g. within a Jenkins job
+# target-os.version =
+# github.oauth.token =
+
 # ---- build settings - ---------------------------------------------------------
 appserver-base.dir = /opt/appserver
 os.architecture = x86_64
 os.version.prefix = fc
-target-os.version = 21
 build.number = ${env.BUILD_NUMBER}
 build.name.prefix = appserver-
 build.name.ext = rpm
