bugfixes + packaged box check

--- a/build.default.properties
+++ b/build.default.properties
@@ -22,11 +22,12 @@ vagrant.provider = virtualbox
 
 # ---- Vagrant box settings -----------------------------------------------------
 vagrant-box.prefix = appserverFedora${target-os.version}
+vagrant-box.remote.location = http://boxes.appserver.io/linux/fedora
 
 # ---- build specific settings - ---------------------------------------------------------
 # Supply only if not given otherwise e.g. within a Jenkins job
-# target-os.version =
-# github.oauth.token =
+target-os.version = 21
+github.oauth.token = c14584f4d23eeb5172ccf6e0fb62b1d6213d2044
 
 # ---- build settings - ---------------------------------------------------------
 appserver-base.dir = /opt/appserver
