--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -12,4 +12,6 @@ test.basedir = .
 
 # ---- Jmeter specific properties -----------------------------------------------
 jmeter.vagrant.dir = /opt/jmeter
-jmeter.example-test.path ${appserver-base.dir}/webapps/example/jmeter
+jmeter.example-test.path = ${appserver-base.dir}/webapps/example/jmeter
+jmeter.package.name = apache-jmeter-2.13.tgz
+jmeter.download.url = http://mirror.23media.de/apache/jmeter/binaries/${jmeter.package.name}
