bugfix: doubled jmeter download url

--- a/build.default.properties
+++ b/build.default.properties
@@ -26,8 +26,10 @@ vagrant-box.remote.location = http://boxes.appserver.io/linux/fedora
 
 # ---- build specific settings - ---------------------------------------------------------
 # Supply only if not given otherwise e.g. within a Jenkins job
-target-os.version = 21
-github.oauth.token = c14584f4d23eeb5172ccf6e0fb62b1d6213d2044
+#target-os.version = <TARGETED_OS_VERSION> e.g. 21
+#github.oauth.token = <YOUR_TOKEN_HERE>
+#appserver.runtime.version = <VERSION_NUMBER> e.g. 1.1.0
+#appserver.runtime.build = <BUILD_NUMBER> e.g. 49.alpha2
 
 # ---- build settings - ---------------------------------------------------------
 appserver-base.dir = /opt/appserver
@@ -46,7 +48,7 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 # ---- appserver source ---------------------------------------------------------
 # appserver.src.version will be obtained by cloning the github repository and reading out the latest tag
 # you can set a version by your own to build a specific dist version
-# appserver.src.version = your.specific.version
+# appserver.src.version = <YOUR_VERSION_HERE>
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
