changed handling of jmeter download and deployment

--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -11,7 +11,8 @@
 test.basedir = .
 
 # ---- Jmeter specific properties -----------------------------------------------
-jmeter.vagrant.dir = /opt/jmeter
+jmeter.vagrant.basedir = /opt
 jmeter.example-test.path = ${appserver-base.dir}/webapps/example/jmeter
-jmeter.package.name = apache-jmeter-2.13.tgz
-jmeter.download.url = http://mirror.23media.de/apache/jmeter/binaries/${jmeter.package.name}
+jmeter.package.name = apache-jmeter-2.13
+jmeter.package.extension = .tgz
+jmeter.download.url = http://mirror.23media.de/apache/jmeter/binaries/${jmeter.package.name}${jmeter.package.extension}
